# ComfyUI-Qwen3.5

./: .gitignore  README.md  __init__.py  nodes.py  nodes_gguf.py  nodes_wavespeed.py  pyproject.toml  requirements.txt
.github/instructions/: issues-tracking.instructions.md  qwen3.5-family.instructions.md
.github/issues/: index.md
.github/issues/deferred/: README.md
.github/issues/found/: README.md
.github/issues/solved/: QWEN-001-vanilla-model-paths.md  QWEN-002-dynamic-model-dropdowns.md  QWEN-003-interrupt-inference.md  README.md
.github/skills/comfyui-custom-node-api/: SKILL.md
.github/skills/comfyui-custom-node-api/references/: comfyui-node-api-checklist.md
workflows/: qwen3.5.json
