[project]
name = "comfyui-qwen35"
description = "Qwen3.5 vision-language nodes for ComfyUI — transformers (FP16/8-bit/4-bit), GGUF (llama.cpp, 9x faster), and WaveSpeed cloud API (up to 397B). Image understanding, video understanding, text generation, and thinking mode."
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "numpy",
    "Pillow",
]

[project.urls]
Repository = "https://github.com/DanielBartolic/ComfyUI-Qwen3.5"

[tool.comfy]
PublisherId = "diobrando0"
DisplayName = "Qwen 3.5"
Icon = ""
